# CppGL

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/actions/clang/: Dockerfile  entrypoint.sh
CppGL/: CMakeLists.txt
CppGL/include/: Camera.h  Camera.hpp  Config.h  Config.hpp  Font.h  Font.hpp  Game.h  Game.hpp  GameUI.hpp  Icosphere.hpp  Loader.h  Loader.hpp  Logger.hpp  LuaScript.hpp  Mesh.h  Mesh.hpp  Model.h  Model.hpp  PhysXSetup.h  PhysXSetup.hpp  Renderable.hpp  Shader.h  Shader.hpp  Skybox.hpp  Texture.h  Texture.hpp
CppGL/include/ecs/: Component.h  Entity.h
CppGL/include/utils/: Conversions.hpp  DebugDrawer.h  DebugDrawer.hpp  FmtExtensions.hpp  Resource.h  Resource.hpp
CppGL/resources/: CMakeLists.txt
CppGL/resources/models/link/: link.mtl
CppGL/resources/models/spaceship/: spaceship.fbx
CppGL/resources/models/spacetruck/: spacetruck.mtl
CppGL/resources/shaders/: basic.frag  basic.vert  debugline.frag  debugline.vert  lamp.frag  model.frag  multiple_lights.frag  overlay.frag  overlay.vert  overlaytext.frag  overlaytext.vert  shader.vert  snoise.glsl  text.frag
CppGL/src/: Camera.cpp  Font.cpp  Game.cpp  GameUI.cpp  Icosphere.cpp  LuaScript.cpp  Main.cpp  Mesh.cpp  Model.cpp  PhysXSetup.cpp  Shader.cpp  Skybox.cpp  Texture.cpp
CppGL/src/utils/: Resource.cpp
third/: CMakeLists.txt
third/glad/include/glad/: glad.h
third/glad/src/: glad.c
third/lua/: CMakeLists.txt
